--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ section.allElems {
 
 .allElems header {
     width: 100%;
-    background-image: url("assets/city.jpg");
+    background-image: url(https://images.unsplash.com/photo-1717361279773-b2e7ee713d2e?q=80&w=3869&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     background-size: cover;
     background-position: center;
     margin-bottom: 40px;
